# speech-transcriber

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: .gitignore
src/speech_transcriber/: README.md  __init__.py  cli.py  config.py  requirements.txt
src/speech_transcriber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/speech_transcriber/audio/: __init__.py  extractor.py  splitter.py
src/speech_transcriber/pdf/: __init__.py  builder.py
src/speech_transcriber/stt/: __init__.py  cleaner.py  transcriber.py
src/speech_transcriber/webapp/: __init__.py  routes.py
src/speech_transcriber/webapp/static/: style.css
src/speech_transcriber/webapp/templates/: index.html
src/tests/: test_transcriber.py
