[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-transcriber"
version = "0.1.0"
description = "Video to PDF transcription (ES‑LatAM)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.14",
    "pydub>=0.25",
    "python-dotenv",
    "tqdm",
    "reportlab",
    "flask",
    "click"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools]
package-dir = {"" = "src"}          # <-- layout 'src/'
packages = ["speech_transcriber"]
